--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -1,8 +1,12 @@
+[toolchain]
+
 [features]
 seeds = false
 skip-lint = false
+
 [programs.localnet]
 counter = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"
+marketplace = "2xnGNsckC4PcvmDUmUz7dM9hNHCAFmxfk8W3iT8TX4iQ"
 
 [registry]
 url = "https://api.apr.dev"
@@ -14,5 +18,12 @@ wallet = "~/.config/solana/id.json"
 [scripts]
 test = "../node_modules/.bin/nx run anchor:jest"
 
+[test]
+startup_wait = 5000
+shutdown_wait = 2000
+upgradeable = false
+
 [test.validator]
 bind_address = "127.0.0.1"
+ledger = ".anchor/test-ledger"
+rpc_port = 8899
